cluster/talos/apps/home-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    goldilocks.fairwinds.com/enabled: "true"
